[gd_scene load_steps=2 format=3 uid="uid://crngejj5apm2l"]

[ext_resource type="Script" path="res://Scripts/UI/Lobbies_list_menu/LobbyList_script.gd" id="1_50nqw"]

[node name="LobbiesControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 61.0
offset_right = -162.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50nqw")

[node name="PanelContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.462
anchor_top = 0.046
anchor_right = 0.965
anchor_bottom = 0.951
offset_left = -33.38
offset_top = -0.00200081
offset_right = 0.650024
offset_bottom = -0.237
grow_horizontal = 0
grow_vertical = 2

[node name="LobbiesList" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
